--- a/css/main.css
+++ b/css/main.css
@@ -4,7 +4,7 @@ body{
 
 .jumbotron{
     text-align: center;
-    background-color: black;
+    background-color: rgb(197, 73, 73);
     color: orange;
 }
 
@@ -22,8 +22,8 @@ body{
 
 footer {
     padding: 10px 10px 0 10px;
-    background-color: black;
-    color: white;
+    background-color: rgb(170, 90, 90);;
+    color: black;
     margin-bottom: 0;
     margin-top: 10px;
 }
